--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
+    "query-string": "^7.0.1",
     "react": "17.0.1",
     "react-native": "0.64.1"
   },
