--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "i18next": "^20.3.2",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "17.0.1",
+    "react-i18next": "^11.11.0",
     "react-native": "0.64.1",
     "react-native-screens": "^3.4.0"
   },
