--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-i18next": "^11.11.0",
     "react-native": "0.64.1",
+    "react-native-keyboard-manager": "*",
     "react-native-screens": "^3.4.0"
   },
   "devDependencies": {
