--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^6.0.0",
     "axios": "^0.21.1",
     "i18next": "^20.3.2",
     "lodash": "^4.17.21",
