--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^6.0.0",
+    "@react-navigation/native": "^5.9.4",
     "axios": "^0.21.1",
     "i18next": "^20.3.2",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "17.0.1",
+    "react-fast-compare": "^3.2.0",
     "react-i18next": "^11.11.0",
     "react-native": "0.64.1",
     "react-native-keyboard-manager": "*",
+    "react-native-modal": "^12.0.2",
     "react-native-screens": "^3.4.0"
   },
   "devDependencies": {
