--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-native-community/netinfo": "^6.0.0",
     "@react-navigation/native": "^5.9.4",
     "axios": "^0.21.1",
@@ -22,7 +23,8 @@
     "react-native": "0.64.1",
     "react-native-keyboard-manager": "*",
     "react-native-modal": "^12.0.2",
-    "react-native-screens": "^3.4.0"
+    "react-native-screens": "^3.4.0",
+    "react-native-vector-image": "^0.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
