--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   },
   "dependencies": {
     "@klarna/react-native-vector-drawable": "^0.3.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^6.0.0",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "i18next": "^20.3.2",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "17.0.1",
     "react-fast-compare": "^3.2.0",
+    "react-hook-form": "^7.9.0",
     "react-i18next": "^11.11.0",
     "react-native": "0.64.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-manager": "*",
     "react-native-modal": "^12.0.2",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-vector-image": "^0.3.2"
+    "react-native-vector-image": "^0.3.2",
+    "recoil": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
