--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,4 @@
 rootProject.name = 'BoilerplateReactNative'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
+apply from: '../node_modules/react-native-unimodules/gradle.groovy'; includeUnimodulesProjects()
