--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^6.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "expo-font": "^9.1.0",
     "i18next": "^20.3.2",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
@@ -30,6 +33,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-unimodules": "^0.13.3",
     "react-native-vector-image": "^0.3.2",
     "recoil": "^0.3.1"
   },
