--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
     "expo-font": "^9.2.1",
     "i18next": "^20.3.2",
     "lodash": "^4.17.21",
