--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL_DEV = "http://3000"
-URL_PRODUCTION = "http://5000"
+URL_DEV = "http://8000"
+URL_PRODUCTION = "https://github.com/goatandsheep/react-native-dotenv"
