--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-hook-form": "^7.10.1",
     "react-i18next": "^11.11.1",
     "react-native": "0.64.1",
-    "react-native-config": "^1.4.2",
+    "react-native-dotenv": "^3.0.0",
     "react-native-fast-image": "^8.3.6",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-manager": "*",
