--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-unimodules": "^0.14.3",
     "react-native-vector-image": "^0.3.2",
+    "react-navigation-heavy-screen": "^1.2.1",
     "recoil": "^0.3.1"
   },
   "devDependencies": {
