--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "react-i18next": "^11.11.1",
     "react-native": "0.64.1",
     "react-native-dotenv": "^3.0.0",
+    "react-native-error-boundary": "^1.1.10",
     "react-native-fast-image": "^8.3.6",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-keyboard-manager": "*",
+    "react-native-keyboard-manager": "6.5.4-1",
     "react-native-modal": "^12.0.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
