Config react-query, fix App Transport Security policy IOS

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL_DEV = "http://8000"
+URL_DEV = "http://api-app.qichangv.com/"
 URL_PRODUCTION = "https://github.com/goatandsheep/react-native-dotenv"
