React quert post data api

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL_DEV = "http://api-app.qichangv.com/"
+URL_DEV = "http://localhost:3000/"
 URL_PRODUCTION = "https://github.com/goatandsheep/react-native-dotenv"
