--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "i18next": "^20.3.5",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-fast-compare": "^3.2.0",
     "react-hook-form": "^7.12.2",
     "react-i18next": "^11.11.3",
-    "react-native": "0.64.2",
+    "react-native": "0.65.0",
     "react-native-dotenv": "^3.1.1",
     "react-native-error-boundary": "^1.1.10",
     "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-manager": "6.5.4-1",
     "react-native-modal": "^12.0.3",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^2.2.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
     "react-native-unimodules": "^0.14.6",
@@ -54,7 +54,8 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "metro-react-native-babel-preset": "^0.66.0",
+    "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
   },
